# smart_grasping_sandbox

./: Dockerfile  README.md  aws.yml  circle.yml  entrypoint.sh  jenkins.yml  jupyter_notebook_config.py  model_urdf.config  repository.rosinstall  shippable.yml
.circleci/: config.yml
fh_desc/: CMakeLists.txt  hand_h.srdf  hand_h.urdf  model.config  model.urdf  model.xml  package.xml  smart_grasping_sandbox.urdf
fh_desc/common/: common.xacro  materials.xacro
fh_desc/config/: hand_H_gazebo_trajectory.yaml
fh_desc/hand/xacro/0x02000101/: 0x02000101.xacro
fh_desc/hand/xacro/0x02000102/: 0x02000102.xacro
fh_desc/hand/xacro/0x02000103/: 0x02000103.xacro
fh_desc/hand/xacro/0x1234/: 0x1234.xacro
fh_desc/hand/xacro/0x1235/: 0x1235.xacro
fh_desc/launch/: launch_simulation.launch
fh_desc/meshes/: base_link.dae  dist.dae  force_torque_sensor.dae  omd-d18-tip.stl  palm_base.dae  palm_base.stl  prox.dae  wrist.dae  wrist.stl  wrist_base.dae  wrist_base.stl
fh_desc/meshes/v2/: finger_base_link_simple.dae  finger_dist_link_simple.dae  finger_palm_link.dae  finger_prox_link.dae  finger_prox_link_simple.dae  palm_link.dae  palm_link_simple.dae  wrist_base_link.dae  wrist_roll_link.dae  wrist_split_link.dae
fh_desc/other/worlds/: hand_h.world
fh_desc/robots/: 0x02000101.urdf.xacro  0x02000102.urdf.xacro  0x02000103.urdf.xacro  0x1234.urdf.xacro  0x1235.urdf.xacro  hand_h.xacro  hand_h_to_attach.xacro  right_H1_ur5.urdf
fh_desc/scripts/fh_description/: urdf_loader.py
fh_desc/test/: test_loader.py
fh_description/: CMakeLists.txt  mainpage.dox  package.xml  (+2 more)
(+67 files in other folders)
